--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -34,7 +36,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/public/img/doge.jpeg" alt="Second slide">
+                <img class="d-block w-100" src="/public/img/puppy2.jpg" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>dog2</h5>
                     <p>...</p>
@@ -42,6 +44,20 @@
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="/public/img/puppies-cover.jpg" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>dog3</h5>
+                    <p>...</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="/public/img/puppy4.jpeg" alt="fourth slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>dog3</h5>
+                    <p>...</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="/public/img/puppy5.jpg" alt="fifth slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>dog3</h5>
                     <p>...</p>
