fixed some errors

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
         </button>
     </nav>
@@ -32,35 +32,35 @@
                 <img class="d-block w-100 mx-auto" src="/public/img/536413-gettyimages-1077470274.jpg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block target-text">
                     <h5><mark class="markstyle">German Shephard</mark></h5>
-                    <p><mark class="markstyle">So majestic</mark></p>
+                    <p><mark class="markstyle">So Majestic</mark></p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100 mx-auto" src="/public/img/puppy2.jpg" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block target-text">
                     <h5><mark class="markstyle">Labrador Retriever</mark></h5>
-                    <p><mark class="markstyle">cute overload</mark></p>
+                    <p><mark class="markstyle">Cute Overload</mark></p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100 mx-auto" src="/public/img/puppies-cover.jpg" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block target-text">
                     <h5><mark class="markstyle">Golden Retriever</mark></h5>
-                    <p><mark class="markstyle">All the handsoms</mark></p>
+                    <p><mark class="markstyle">All The Handsoms</mark></p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100 mx-auto" src="/public/img/puppy4.jpeg" alt="fourth slide">
                 <div class="carousel-caption d-none d-md-block target-text">
                     <h5><mark class="markstyle">Pug</mark></h5>
-                    <p><mark class="markstyle">Give that pug a hug</mark></p>
+                    <p><mark class="markstyle">Give That Pug A Hug</mark></p>
                 </div>
             </div>
             <div class="carousel-item mx-auto">
                 <img class="d-block w-100 mx-auto" src="/public/img/puppy5.jpg" alt="fifth slide">
                 <div class="carousel-caption d-none d-md-block target-text">
                     <h5><mark class="markstyle">Husky</mark></h5>
-                    <p><mark class="markstyle">Too soft to handle</mark></p>
+                    <p><mark class="markstyle">Too Soft To Handle</mark></p>
                 </div>
             </div>
         </div>
